[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/circles.png" type="Texture" id=1]
[ext_resource path="res://assets/light.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/SecondBoss.gd" type="Script" id=3]
[ext_resource path="res://assets/TitanOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 21.4709

[sub_resource type="CircleShape2D" id=2]
radius = 23.0

[sub_resource type="Curve" id=13]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 13 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.506135 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_curve = SubResource( 10 )
scale = 11.0
scale_random = 0.5
scale_curve = SubResource( 12 )
color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 4 )

[node name="SecondBoss" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="texture" type="Sprite" parent="."]
modulate = Color( 0.87451, 0.172549, 0.172549, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="light" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 2.0
color = Color( 0.913725, 0.0509804, 0.0509804, 1 )
energy = 3.0
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 30.0

[node name="col" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="collision" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="collision"]
visible = false
shape = SubResource( 2 )

[node name="damage_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="dieFx" type="Particles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource( 15 )

[node name="dieTimer" type="Timer" parent="."]

[node name="life_label" type="Label" parent="."]
margin_left = -5.0
margin_top = -40.0
margin_right = 9.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 16 )
text = "6"

[connection signal="body_entered" from="collision" to="." method="_on_collision_body_entered"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="dieTimer" to="." method="_on_dieTimer_timeout"]
